[tool.poetry]
name = "fhirguard"
version = "0.1.0"
description = ""
authors = ["Thomas Judd-Cooper <thomas.judd-cooper1@nhs.net>"]
readme = "README.md"
packages = [
    { include = "fhirguard_cli" },
    { include = "fhirguard_core" },
    { include = "fhirguard" }
]

[tool.poetry.scripts]
fhirguard = "fhirguard_cli.main:app"

[tool.poetry.dependencies]
python = ">=3.8"
typer = {extras = ["all"], version = "^0.9.0"}
requests = "^2.31.0"
fhir-resources = "^7.1.0"
platformdirs = "^4.1.0"
pycountry = "^23.12.11"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pytest = "^8.0.2"

[tool.isort]
profile = "black"

[tool.fhirguard]
target_packages = ["fhir.r4.ukcore.stu2@1.1.3", "uk.nhsdigital.r4@2.8.0"]
reference_packages = ["hl7.fhir.r4.core@4.0.1"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
